import {meter} from '../src';

describe('meter', () => {
    it('renders with children', () => {
        expect(meter({}, 'TEST')).toMatchSnapshot();
    });
    
    it('renders arrays of children', () => {
        expect(meter({}, Array(10).fill('TEST'))).toMatchSnapshot();
    });

    it('renders with empty attributes', () => {
        expect(meter({})).toMatchSnapshot();
    });

    it('renders without attributes', () => {
        expect(meter()).toMatchSnapshot();
    });

    it('renders with accessKey="a,b,c,d"', () => {
        expect(meter({accessKey: "a,b,c,d"})).toMatchSnapshot();
    });

    it('renders with autoCapitalize="on"', () => {
        expect(meter({autoCapitalize: "on"})).toMatchSnapshot();
    });

    it('renders with autoCapitalize="off"', () => {
        expect(meter({autoCapitalize: "off"})).toMatchSnapshot();
    });

    it('renders with autoCapitalize="none"', () => {
        expect(meter({autoCapitalize: "none"})).toMatchSnapshot();
    });

    it('renders with autoCapitalize="sentences"', () => {
        expect(meter({autoCapitalize: "sentences"})).toMatchSnapshot();
    });

    it('renders with autoCapitalize="words"', () => {
        expect(meter({autoCapitalize: "words"})).toMatchSnapshot();
    });

    it('renders with autoCapitalize="characters"', () => {
        expect(meter({autoCapitalize: "characters"})).toMatchSnapshot();
    });

    it('renders with className="foo bar baz"', () => {
        expect(meter({className: "foo bar baz"})).toMatchSnapshot();
    });

    it('renders with contentEditable="true"', () => {
        expect(meter({contentEditable: "true"})).toMatchSnapshot();
    });

    it('renders with contentEditable="false"', () => {
        expect(meter({contentEditable: "false"})).toMatchSnapshot();
    });

    it('renders with dir="ltr"', () => {
        expect(meter({dir: "ltr"})).toMatchSnapshot();
    });

    it('renders with dir="rtl"', () => {
        expect(meter({dir: "rtl"})).toMatchSnapshot();
    });

    it('renders with dir="auto"', () => {
        expect(meter({dir: "auto"})).toMatchSnapshot();
    });

    it('renders with draggable="true"', () => {
        expect(meter({draggable: "true"})).toMatchSnapshot();
    });

    it('renders with draggable="false"', () => {
        expect(meter({draggable: "false"})).toMatchSnapshot();
    });

    it('renders with hidden=true', () => {
        expect(meter({hidden: true})).toMatchSnapshot();
    });

    it('renders with hidden=false', () => {
        expect(meter({hidden: false})).toMatchSnapshot();
    });

    it('renders with id="TEST"', () => {
        expect(meter({id: "TEST"})).toMatchSnapshot();
    });

    it('renders with inputMode="none"', () => {
        expect(meter({inputMode: "none"})).toMatchSnapshot();
    });

    it('renders with inputMode="text"', () => {
        expect(meter({inputMode: "text"})).toMatchSnapshot();
    });

    it('renders with inputMode="tel"', () => {
        expect(meter({inputMode: "tel"})).toMatchSnapshot();
    });

    it('renders with inputMode="email"', () => {
        expect(meter({inputMode: "email"})).toMatchSnapshot();
    });

    it('renders with inputMode="url"', () => {
        expect(meter({inputMode: "url"})).toMatchSnapshot();
    });

    it('renders with inputMode="numeric"', () => {
        expect(meter({inputMode: "numeric"})).toMatchSnapshot();
    });

    it('renders with inputMode="decimal"', () => {
        expect(meter({inputMode: "decimal"})).toMatchSnapshot();
    });

    it('renders with inputMode="search"', () => {
        expect(meter({inputMode: "search"})).toMatchSnapshot();
    });

    it('renders with is="foo"', () => {
        expect(meter({is: "foo"})).toMatchSnapshot();
    });

    it('renders with itemID="https://google.com/"', () => {
        expect(meter({itemID: "https://google.com/"})).toMatchSnapshot();
    });

    it('renders with itemProp="https://google.com/"', () => {
        expect(meter({itemProp: "https://google.com/"})).toMatchSnapshot();
    });

    it('renders with itemRef="foo bar"', () => {
        expect(meter({itemRef: "foo bar"})).toMatchSnapshot();
    });

    it('renders with itemScope=true', () => {
        expect(meter({itemScope: true})).toMatchSnapshot();
    });

    it('renders with itemScope=false', () => {
        expect(meter({itemScope: false})).toMatchSnapshot();
    });

    it('renders with itemType="https://google.com/"', () => {
        expect(meter({itemType: "https://google.com/"})).toMatchSnapshot();
    });

    it('renders with lang="es-419"', () => {
        expect(meter({lang: "es-419"})).toMatchSnapshot();
    });

    it('renders with lang=""', () => {
        expect(meter({lang: ""})).toMatchSnapshot();
    });

    it('renders with slot="TEST"', () => {
        expect(meter({slot: "TEST"})).toMatchSnapshot();
    });

    it('renders with spellCheck="true"', () => {
        expect(meter({spellCheck: "true"})).toMatchSnapshot();
    });

    it('renders with spellCheck="false"', () => {
        expect(meter({spellCheck: "false"})).toMatchSnapshot();
    });

    it('renders with style={"color":"#000000"}', () => {
        expect(meter({style: {"color":"#000000"}})).toMatchSnapshot();
    });

    it('renders with tabIndex=1', () => {
        expect(meter({tabIndex: 1})).toMatchSnapshot();
    });

    it('renders with title="TEST"', () => {
        expect(meter({title: "TEST"})).toMatchSnapshot();
    });

    it('renders with translate="yes"', () => {
        expect(meter({translate: "yes"})).toMatchSnapshot();
    });

    it('renders with translate="no"', () => {
        expect(meter({translate: "no"})).toMatchSnapshot();
    });

    it('renders with high=1.1', () => {
        expect(meter({high: 1.1})).toMatchSnapshot();
    });

    it('renders with low=1.1', () => {
        expect(meter({low: 1.1})).toMatchSnapshot();
    });

    it('renders with max=1.1', () => {
        expect(meter({max: 1.1})).toMatchSnapshot();
    });

    it('renders with min=1.1', () => {
        expect(meter({min: 1.1})).toMatchSnapshot();
    });

    it('renders with optimum=1.1', () => {
        expect(meter({optimum: 1.1})).toMatchSnapshot();
    });

    it('renders with value=1.1', () => {
        expect(meter({value: 1.1})).toMatchSnapshot();
    });
});